@@ -239,8 +239,12 @@ JGLOBAL_BATCH_ACCESS_LABEL="Set Access Level"
 JGLOBAL_BATCH_ACCESS_LABEL_DESC="Not making a selection will keep the original access levels when processing."
 JGLOBAL_BATCH_COPY="Copy"
 JGLOBAL_BATCH_MOVE="Move"
-JGLOBAL_BATCH_MOVE_PARENT_NOT_FOUND="Move parent not found"
-JGLOBAL_BATCH_MOVE_ROW_NOT_FOUND="Move row not found"
+JGLOBAL_BATCH_CATEGORY_CANNOT_CREATE="You are not allowed to create new categories in this category."
+JGLOBAL_BATCH_CATEGORY_CANNOT_EDIT="You are not allowed to edit one or more of these categories."
+JGLOBAL_BATCH_MENU_ITEM_CANNOT_CREATE="You are not allowed to create new menu items."
+JGLOBAL_BATCH_MENU_ITEM_CANNOT_EDIT="You are not allowed to edit menu items."
+JGLOBAL_BATCH_MOVE_PARENT_NOT_FOUND="Cannot find the destination parent for this move."
+JGLOBAL_BATCH_MOVE_ROW_NOT_FOUND="Cannot find the item being moved."
 JGLOBAL_BATCH_NOCHANGE="- Keep original Access Levels -"
 JGLOBAL_BATCH_PROCESS="Process"
 JGLOBAL_BATCH_SUCCESS="Batch process completed successfully."
